--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <link rel="stylesheet" href="css/owl.carousel.css"/>
 <link rel="stylesheet" href="css/style.css"/>
 <link rel="stylesheet" href="css/colors/yellow.css" id="color"/>
+<link rel="stylesheet" href="css/custom.css"/>
 
     
 <!-- Google Web fonts
